--- a/src/app/core/sidebar/floor-picker/floor-picker.component.scss
+++ b/src/app/core/sidebar/floor-picker/floor-picker.component.scss
@@ -22,14 +22,7 @@
   }
 
   &:not(.open) {
-    left: -380px;
-
-    .title {
-      position: absolute;
-      right: 28px;
-      top: calc(50% - 30px);
-      transform: rotate(-90deg);
-    }
+    left: -400px;
   }
 
   .selector,
@@ -118,49 +111,44 @@
 
 @media only screen and (max-width: 959.98px) {
   .container {
-    padding: .5rem;
-    padding-right: 4rem;
-    border-radius: 0 5px 5px 0;
+    position: static;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+    min-height: auto;
+    width: auto;
+    padding: 0;
     margin-bottom: 1rem;
-    left: 0;
-    top: 75px;
-    min-height: 70px;
-    width: 235px;
+    margin-top: 3.5rem;
 
     .title {
+      display: none;
       font-size: 14px;
       margin: .5rem 0;
-    }
-
-    &:not(.open) {
-      left: -255px;
-
-      .title {
-        font-size: 14px;
-        right: 20px;
-        top: calc(50% - 14px);
-      }
     }
 
     .selector,
     .picker {
       button {
-        padding: 8px;
+        padding: 12px;
         margin-right: 10px;
+        &:last-child {
+          margin-right: 0;
+        }
       }
     }
 
     .selector {
       margin-bottom: 5px;
       button {
-        font-size: 14px;
+        font-size: 22px;
         font-weight: bold;
-        padding-left: 8px;
-        padding-right: 8px;
+        padding-left: 18px;
+        padding-right: 18px;
         border-radius: 8px;
         min-width: 36px;
         >span {
-          font-size: 10px;
+          font-size: 12px;
         }
         &.current-floor {
           fa-icon {
@@ -172,21 +160,18 @@
 
     .picker {
       button {
-        padding: 5px;
-        font-size: 14px;
+        padding: 8px;
+        font-size: 16px;
         font-weight: normal;
         border-radius: 5px;
         >span {
-          font-size: 10px;
+          font-size: 12px;
         }
       }
     }
 
     .toggle {
-      right: .2rem;
-      top: calc(50% - 18px);
-      font-size: 18px;
-      padding: .5rem;
+      display: none;
     }
   }
 }
