--- a/src/app/core/sidebar/search/search.component.html
+++ b/src/app/core/sidebar/search/search.component.html
@@ -1,21 +1,33 @@
-<div style="position: relative; width: 0; height: 0">
-  <div class="container" [ngClass]="{'search-opened': searchOpen}">
-    <div class="overlay"></div>
-    <fa-icon [icon]="['fal', 'search']" [size]="searchOpen ? '2x' : 'lg'" class="search-icon"></fa-icon>
-    <fa-icon [icon]="['fal', 'times']" size="2x" class="close-icon" *ngIf="searchOpen" (click)="onClose(select)"></fa-icon>
-    <ng-select ngSelectMat
-               #select
-               class="custom"
-               [placeholder]="'searchPlaceholder' | translate"
-               dropdownPosition="bottom"
-               [(ngModel)]="selectedPoi"
-               [isOpen]="optionsOpen"
-               [closeOnSelect]="true"
-               [clearSearchOnAdd]="true"
-               (click)="onSearchOpen()"
-               (search)="onSearch($event)"
-               (change)="onSelect($event, select)">
-      <ng-option *ngFor="let poi of pois" [value]="poi">{{poi.properties.title}}</ng-option>
-    </ng-select>
-  </div>
+<div class="container" [ngClass]="{ 'search-opened': searchOpen }">
+  <div class="overlay"></div>
+  <fa-icon
+    [icon]="['fal', 'search']"
+    [size]="searchOpen ? '2x' : 'lg'"
+    class="search-icon"
+  ></fa-icon>
+  <fa-icon
+    [icon]="['fal', 'times']"
+    size="2x"
+    class="close-icon"
+    *ngIf="searchOpen"
+    (click)="onClose(select)"
+  ></fa-icon>
+  <ng-select
+    ngSelectMat
+    #select
+    class="custom"
+    [placeholder]="'searchPlaceholder' | translate"
+    dropdownPosition="bottom"
+    [(ngModel)]="selectedPoi"
+    [isOpen]="optionsOpen"
+    [closeOnSelect]="true"
+    [clearSearchOnAdd]="true"
+    (click)="onSearchOpen()"
+    (search)="onSearch($event)"
+    (change)="onSelect($event, select)"
+  >
+    <ng-option *ngFor="let poi of pois" [value]="poi">{{
+      poi.properties.title
+    }}</ng-option>
+  </ng-select>
 </div>
