--- a/src/app/core/sidebar/search/search.component.scss
+++ b/src/app/core/sidebar/search/search.component.scss
@@ -104,7 +104,7 @@
     fa-icon {
       &.search-icon {
         top: 23px;
-        left: 25px;
+        left: 40px;
       }
       &.close-icon {
         opacity: 1;
@@ -142,26 +142,29 @@
 
 @media only screen and (max-width: 959.98px) {
   .container {
-    top: .5rem;
-    left: .5rem;
+    position: static;
 
     fa-icon {
       font-size: 12px;
-      top: 8px;
+      top: 28px;
       &.close-icon {
-        right: 25px;
-        top: 18px;
+        right: 50px;
+        top: 37px;
       }
+      &.search-icon {
+        left: 38px;
+      };
     }
 
     .ng-select.custom ::ng-deep {
-      left: .5rem;
-      right: 60px;
+      top: 1rem;
+      left: 1.5rem;
+      right: 1.5rem;
       position: fixed;
       min-width: 260px;
       .ng-select-container {
         width: 100%;
-        height: 32px;
+        height: 40px;
         .ng-value-container {
           padding-left: 35px;
           .ng-input {
@@ -184,18 +187,19 @@
     &.search-opened {
       fa-icon {
         font-size: 10px;
+        top: 30px;
         &.search-icon {
-          top: 10px;
-          left: 15px;
+          top: 30px;
+          left: 42px;
         }
       }
 
       .ng-select.custom ::ng-deep {
-        left: .5rem;
-        right: .5rem;
+        left: 1.5rem;
+        right: 1.5rem;
 
         .ng-select-container  {
-          height: 40px;
+          height: 46px;
           border-width: 2px;
 
           .ng-value-container {
@@ -206,8 +210,12 @@
               font-size: 18px;
             }
 
+            .ng-placeholder {
+              margin-top: 2px;
+            }
+
             .ng-input {
-              top: 8px;
+              top: 10px;
             }
           }
         }
