--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div [class]="'theme-wrapper ' + theme$">
-  <div class="content">
+  <main class="content">
     <app-sidebar></app-sidebar>
     <app-map></app-map>
-  </div>
+  </main>
 </div>
 
 
