navbar imrovements on small screens

--- a/src/app/core/sidebar/search/search.component.scss
+++ b/src/app/core/sidebar/search/search.component.scss
@@ -143,6 +143,7 @@
 @media only screen and (max-width: 959.98px) {
   .container {
     position: static;
+    height: 42px;
 
     fa-icon {
       font-size: 12px;
