--- a/src/app/core/sidebar/floor-picker/floor-picker.component.scss
+++ b/src/app/core/sidebar/floor-picker/floor-picker.component.scss
@@ -118,13 +118,17 @@
     min-height: auto;
     width: auto;
     padding: 0;
-    margin-bottom: 1rem;
-    margin-top: 3.5rem;
+    margin: 0;
+    display: flex;
+    width: 280px;
+    align-items: flex-end;
 
     .title {
-      display: none;
       font-size: 14px;
-      margin: .5rem 0;
+      margin: 0;
+      line-height: 40px;
+      flex: auto;
+      color: black;
     }
 
     .selector,
@@ -139,26 +143,31 @@
     }
 
     .selector {
-      margin-bottom: 5px;
+      margin-bottom: 0;
       button {
-        font-size: 22px;
+        font-size: 16px;
         font-weight: bold;
-        padding-left: 18px;
-        padding-right: 18px;
-        border-radius: 8px;
-        min-width: 36px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 4px;
+        min-width: 38px;
         >span {
-          font-size: 12px;
+          font-size: 10px;
         }
         &.current-floor {
+          cursor: auto;
+          &:hover {
+            background-color: $default-color;
+          }
           fa-icon {
-            margin-left: 20px;
+            display: none;
           }
         }
       }
     }
 
     .picker {
+      display: none;
       button {
         padding: 8px;
         font-size: 16px;
