--- a/src/app/core/sidebar/shop-picker/shop-picker.component.scss
+++ b/src/app/core/sidebar/shop-picker/shop-picker.component.scss
@@ -60,6 +60,13 @@
       margin: 0;
       padding: 0;
       >li {
+        width: 44px;
+        .icon {
+          width: 44px;
+          height: 44px;
+          line-height: 44px;
+          font-size: 16px;
+        }
         p {
           text-overflow: ellipsis;
           overflow: hidden;
