--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -3,18 +3,18 @@
 :host {
   position: relative;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: calc(100vh - calc(100vh - 100%));
   min-height: 320px;
   z-index: 0;
   >main {
-    height: 100%;
+    height: calc(100vh - calc(100vh - 100%));
   }
 }
 
 #proximiioMap {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: calc(100vh - calc(100vh - 100%));
   min-height: 320px;
 
   ::ng-deep {
