--- a/src/app/core/sidebar/details/details.component.html
+++ b/src/app/core/sidebar/details/details.component.html
@@ -58,7 +58,11 @@
       {{ distanceInMinutes }}
     </p>
 
-    <button (click)="onShowRoute()" class="show-route">
+    <button
+      (click)="onShowRoute()"
+      class="show-route"
+      *ngIf="stateService.state.kioskMode"
+    >
       <fa-icon [icon]="['fal', 'walking']"></fa-icon>
       {{ "takeMeThere" | translate }}
     </button>
@@ -111,10 +115,28 @@
     </div>
   </div>
   <div class="start-box" *ngIf="!stateService.state.kioskMode">
-    <form [formGroup]="startPoiForm">
+    <p
+      class="closest-parking"
+      *ngIf="closestParkingFeature"
+      (click)="onCenterToParking()"
+    >
+      <strong>Closest parking:</strong>
+      {{ closestParkingFeature.properties.title }}
+    </p>
+    <div class="buttons">
+      <button type="button" (click)="onRouteFromParking()">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/people-in-car.png"/>
+        Route from parking
+      </button>
+      <button type="button" (click)="onRouteFromEntrance()">
+        <img src="https://img.icons8.com/ios/50/ffffff/walking--v1.png"/>
+        Route from entrance
+      </button>
+    </div>
+    <!--<form [formGroup]="startPoiForm">
       <div mat-dialog-content>
         <mat-form-field appearance="outline">
-          <mat-label>Start Point</mat-label>
+          <mat-label>Route from different place</mat-label>
           <input
             matInput
             type="text"
@@ -141,6 +163,6 @@
           >
         </mat-form-field>
       </div>
-    </form>
+    </form>-->
   </div>
 </div>
