--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -208,12 +208,50 @@
     }
   }
   .start-box {
-    margin-top: -1.5rem;
+    margin-top: -3rem;
+    padding: 1rem 2rem;
+    padding-top: 0;
+    position: relative;
+
+    .closest-parking {
+      display: inline-block;
+      cursor: pointer;
+      color: $default-color;
+      &:hover {
+        color: darken($default-color, 15%);
+      }
+    }
+
+    .buttons {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 1rem;
+      >button {
+        flex: auto;
+        text-align: center;
+        background-color: $default-color;
+        color: white;
+        border-radius: 6px;
+        max-width: 120px;
+        border: 0;
+        padding: .5rem;
+
+        &:hover {
+          background-color: darken($default-color, 15%);
+        }
+        img {
+          margin: 0 auto;
+          display: block;
+          width: 30px;
+        }
+      }
+    }
+
     .mat-dialog-content {
       text-align: center;
     }
     mat-form-field {
-      width: 80%;
+      width: 100%;
     }
   }
 }
@@ -263,6 +301,15 @@
     }
     .start-box {
       font-size: 12px;
+      .buttons {
+        >button {
+          font-size: 12px;
+          max-width: 80px;
+          img {
+            width: 20px;
+          }
+        }
+      }
     }
   }
 }
