hide qr codes on small screens

--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -288,8 +288,7 @@
       }
       .content {
         .qr-code {
-          top: .5rem;
-          right: 3rem;
+          display: none;
         }
         .show-route {
           display: none;
