--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -8,6 +8,6 @@
   <div id="proximiioMap"></div>
 </main>
 <main *ngIf="!mapLoaded" class="loading">
-  <mat-spinner diameter="150" strokeWidth="1" color="primary"></mat-spinner>
+  <img src="assets/images/MAF_gif.gif" alt="Mall of Emirates">
   <h1>{{ 'welcomeMessage' | translate }}</h1>
 </main>
