--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,10 +54,10 @@
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Quicksand, "Helvetica Neue", sans-serif;
   height: 100vh;
   button {
-    font-family: Roboto, "Helvetica Neue", sans-serif !important;
+    font-family: Quicksand, "Helvetica Neue", sans-serif !important;
   }
 }
 
