--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,4 +1,7 @@
 <main class="container" [ngClass]="{ open: filtersOpened }">
+  <div class="brand">
+    <img src="assets/images/MOE_logo_triangle.png" alt="Mall of Emirates">
+  </div>
   <nav>
     <app-search></app-search>
 
