--- a/src/app/core/sidebar/search/search.component.html
+++ b/src/app/core/sidebar/search/search.component.html
@@ -22,9 +22,11 @@
     [isOpen]="optionsOpen"
     [closeOnSelect]="true"
     [clearSearchOnAdd]="true"
+    [searchFn]="customSearchFn"
     (click)="onSearchOpen()"
     (search)="onSearch($event)"
     (change)="onSelect($event, select)"
+    [disabled]="!mapService.mapReady"
   >
     <ng-option *ngFor="let poi of pois" [value]="poi">{{
       poi.properties.title
